@@ -13,6 +13,7 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
+[fix] some videos failing to play with an Invalid URL exception
 [fix] searching in some instances with encoding issues |contrib: tsaklidis|
 [fix] support python 3.9 html.unescape |contrib: asavah|
         </news>
