@@ -1,4 +1,5 @@
 6.8.6
+[fix] some videos failing to play with an Invalid URL exception
 [fix] searching in some instances with encoding issues |contrib: tsaklidis|
 [fix] support python 3.9 html.unescape |contrib: asavah|
 
